--- a/index.css
+++ b/index.css
@@ -4,6 +4,24 @@
     font-weight: bold;
 }
 
+:root {
+    --button-color: #596d48;
+    --input-border-color: #e5e7eb;
+}
+
+html {
+    box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -41,7 +59,83 @@ body {
 }
 
 #content {
-    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgb(245, 245, 245);
     height: 100vh;
     width: 60%;
+}
+
+p {
+    padding-left: 5%;
+}
+
+p.larger {
+    padding-left: 5%;
+    font-weight: bold;
+    font-size: 2rem;
+    width: 95%;
+}
+
+p.marginless {
+    margin: 0;
+}
+
+h1 {
+    font-size: 1.5rem;
+}
+
+.main-form {
+    width: 100%;
+    background-color: white;
+    margin: 5% 0 5% 0;
+    padding: 5% 0 5% 5%;
+}
+
+.form-row {
+    display: flex;
+    gap: 5%;
+}
+
+label {
+    display: flex;
+    flex-direction: column;
+    font-size: 0.85rem;
+    margin: 1% 0;
+    color: rgb(61, 61, 61);
+    font-family: monospace;
+    width: 40%;
+}
+
+input {
+    border: var(--input-border-color) 1px solid;
+    border-radius: 5px;
+    height: 1.9rem;
+    font-size: larger;
+}
+
+button {
+    margin-left: 5%;
+    border-radius: 5px;
+    color: white;
+    background-color: var(--button-color);
+    padding: 2% 5%;
+    border: none;
+    font-weight: bold;
+    font-size: 1.25rem;
+    transform: scale(1);
+    transition-duration: 0.1s;
+}
+
+button:focus,
+button:hover {
+    transition-duration: 0.1s;
+    transform: scale(1.025);
+}
+
+a {
+    text-decoration: none;
+    color: var(--button-color);
+    font-weight: bold;
 }
