--- a/index.css
+++ b/index.css
@@ -36,6 +36,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     width: 40%;
+    z-index: 100;
 }
 
 .logo {
@@ -91,6 +92,7 @@ h1 {
     background-color: white;
     margin: 5% 0 5% 0;
     padding: 5% 0 5% 5%;
+    box-shadow: 0 0 25px rgb(218, 218, 218);
 }
 
 .form-row {
@@ -113,6 +115,22 @@ input {
     border-radius: 5px;
     height: 1.9rem;
     font-size: larger;
+    outline: none;
+}
+
+input:focus {
+    outline: var(--button-color) 1px solid;
+    box-shadow: 0 0 2px 1px #596d48;
+}
+
+input:valid {
+    outline: var(--button-color) 1px solid;
+    box-shadow: 0 0 2px 1px #596d48;
+}
+
+input:invalid {
+    outline: red 1px dashed;
+    box-shadow: 0 0 3px red;
 }
 
 button {
@@ -128,10 +146,19 @@ button {
     transition-duration: 0.1s;
 }
 
-button:focus,
+button:focus {
+    outline: var(--button-color) 1px solid;
+    box-shadow: 0 0 2px 1px #596d48;
+}
+
 button:hover {
     transition-duration: 0.1s;
     transform: scale(1.025);
+}
+
+button:active {
+    transition-duration: 0.1s;
+    transform: scale(1);
 }
 
 a {
